# AI-Screening-Platform

./: .env  .env.example  README.md  diag_gemini.py  list_models.py  list_models_to_file.py  local_cache.json  pyproject.toml  recruitment.db  test_gemini.py  test_gemini2.py  test_gemini3.py
backend/: main.py  orchestrator.py  worker.py
backend/agents/: comparison_agent.py  email_agent.py  github_agent.py  jd_analyzer.py  resume_parser.py  skill_scorer.py
backend/core/: config.py
backend/db/: database.py
backend/models/: schemas.py
backend/tools/: faiss_tools.py  github_tools.py  pdf_tools.py
backend/utils/: cache.py  json_parser.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CandidateCard.tsx  CandidateForm.tsx  CandidateInsightsModal.tsx  ComparisonRadarChart.tsx  ComparisonSummary.tsx  EmailPanel.tsx  JDInput.tsx  ResumeSidePanel.tsx  SkillGapBar.tsx  SkillRadarChart.tsx  VisualAIAnalysis.tsx
frontend/src/hooks/: useRecruitment.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CandidatesPage.tsx  ComparisonDashboard.tsx  JDPage.tsx
